--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "Shopify Template Using Alpine.js and Tailwind css",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./tailwind.css -o ./assets/style.css --watch --minify",
-    "dev": "npm run tailwind & shopify theme dev & open http://127.0.0.1:9292/"
+    "dev": "shopify theme dev & open http://127.0.0.1:9292/"
   },
-  "keywords": [
-
-  ],
+  "keywords": [],
   "author": "Bogdan Doroshev",
   "license": "ISC",
   "devDependencies": {
