--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "author": "Bogdan Doroshev",
   "license": "ISC",
   "devDependencies": {
+    "laravel-mix": "^6.0.49",
+    "sass": "^1.69.5",
+    "sass-loader": "^12.6.0",
     "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "@alpinejs/collapse": "^3.13.2",
+    "alpinejs": "^3.13.2"
   }
 }
