--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Shopify Template Using Alpine.js and Tailwind css",
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./tailwind.css -o ./assets/style.css --watch --minify",
+    "laravel": "npx mix watch",
     "dev": "shopify theme dev & open http://127.0.0.1:9292/"
   },
   "keywords": [],
