--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shopify Template Using Alpine.js and Tailwind css",
   "scripts": {
     "laravel": "npx mix watch",
-    "dev": "shopify theme dev & open http://127.0.0.1:9292/"
+    "dev": "shopify theme dev"
   },
   "keywords": [],
   "author": "Bogdan Doroshev",
