--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@alpinejs/collapse": "^3.13.2",
+    "@alpinejs/focus": "^3.13.2",
     "alpinejs": "^3.13.2",
     "swiper": "^11.0.3"
   }
