--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@alpinejs/collapse": "^3.13.2",
     "@alpinejs/focus": "^3.13.2",
+    "@alpinejs/intersect": "^3.13.3",
     "alpinejs": "^3.13.2",
     "swiper": "^11.0.3"
   }
